metadata-classic/objects/MIIncident__c.object
<CustomObject>
    <description>Custom object to store data about customer/pro incidents handled by our Marketplace Integrity team.  Stores information about what the incident type is, how it was resolved, and if the Thumbtack Guarantee was used.</description>
    <fields>
        <fullName>AdditionalEligibilityFactors__c</fullName>
        <label>Additional Eligibility Factors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meets all Criteria</fullName>
                </value>
                <value>
                    <fullName>Not Marked as Hired</fullName>
                </value>
                <value>
                    <fullName>Damage is to Excluded Property</fullName>
                </value>
                <value>
                    <fullName>Excluded Category</fullName>
                </value>
                <value>
                    <fullName>Not Physical Damage</fullName>
                </value>
                <value>
                    <fullName>Damage was not Accidental/Unintentional</fullName>
                </value>
                <value>
                    <fullName>Damage Not Caused by Thumbtack Pro</fullName>
                </value>
                <value>
                    <fullName>Not Damage from Original Project Requested</fullName>
                </value>
                <value>
                    <fullName>Theft</fullName>
                </value>
                <value>
                    <fullName>Other (Leave Notes)</fullName>
                </value>
                <value>
                    <fullName>Other - Eligible (Leave Notes)</fullName>
                </value>
                <value>
                    <fullName>Other - Not Eligible (Leave Notes)</fullName>
                </value>
                <value>
                    <fullName>Request made before Guarantee effective date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AddressForCompensation__c</fullName>
        <description>Mailing or email address for TT compensation</description>
        <inlineHelpText>This is the email or mailing address for Thumbtack compensation.</inlineHelpText>
        <label>Address For Compensation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AdminLinkVerificationDataPro__c</fullName>
        <formula>HYPERLINK(&quot;https://www.thumbtack.com/admin/fides/show-verification-data/&quot;&amp;ProID__c, &quot;Show Verification Data&quot;)</formula>
        <label>Admin Link Verification Data (Pro)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkViewUserCustomer__c</fullName>
        <description>Formula field to link Tack user to admin account for the associated customer.</description>
        <formula>IF( 
NOT(ISBLANK(customer_id__c)), 
HYPERLINK(&quot;https://www.thumbtack.com/admin/users/user?usr_user_id=&quot;&amp;customer_id__c, &quot;View User&quot;), 
NULL
)</formula>
        <label>Admin Link View User (Customer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkViewUserPro__c</fullName>
        <description>Formula to link Tack user to Admin for the Pro ID.</description>
        <formula>IF( 
NOT(ISBLANK( pro_user_id__c )), 
HYPERLINK(&quot;https://www.thumbtack.com/admin/users/user?usr_user_id=&quot;&amp;pro_user_id__c, &quot;View User&quot;), 
NULL)</formula>
        <label>Admin Link View User (Pro)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountCompensatedByPro__c</fullName>
        <description>The amount that the professional refunded to the customer to resolve the dispute.</description>
        <inlineHelpText>This is the amount that the professional refunded to resolve the dispute.</inlineHelpText>
        <label>Amount Compensated By Pro</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountCompensatedByThumbtack__c</fullName>
        <description>Amount to be compensated by Thumbtack.</description>
        <inlineHelpText>This is the amount compensated by Thumbtack (subject to approval).</inlineHelpText>
        <label>Amount Compensated By Thumbtack</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountInDispute__c</fullName>
        <description>Amount that the customer is disputing.</description>
        <inlineHelpText>This is the amount that the customer is disputing</inlineHelpText>
        <label>Amount in Dispute</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountInQuestion__c</fullName>
        <description>Formula field to calculate the greater amount between Total Paid to Pro and Desired Resolution Amount.  Used for reporting.</description>
        <formula>IF(
  OR(
     ISBLANK(TotalPaidToPro__c),
     DesiredResolutionAmount__c &gt; TotalPaidToPro__c),
    DesiredResolutionAmount__c,
IF(
  OR(ISBLANK(DesiredResolutionAmount__c),
     TotalPaidToPro__c &gt;=  DesiredResolutionAmount__c),
    TotalPaidToPro__c,
NULL
))</formula>
        <label>Amount in Question</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountRange__c</fullName>
        <formula>IF(OR(AmountInDispute__c = 0, ISBLANK(AmountInDispute__c)),NULL,
IF(AmountInDispute__c &lt;= 100, IMAGE(&quot;/resource/MoneyBagUtilityIcon&quot;, &quot;Less than 100&quot;, 15,15),
IF(AND(AmountInDispute__c &gt; 100,AmountInDispute__c &lt;5000), IMAGE(&quot;/resource/MoneyBag2UtilityIcon&quot;, &quot;Low Dollar Amount&quot;, 15,30),
IF(AmountInDispute__c &gt;= 5000, IMAGE(&quot;/resource/MoneyBag3UtilityIcon&quot;, &quot;Mid Dollar Amount&quot;, 15,45),
IF(AmountInDispute__c &gt;= 15000, IMAGE(&quot;/resource/MoneyBag4UtilityIcon&quot;, &quot;High Dollar Amount&quot;, 15,60),
NULL
)))))</formula>
        <label>Amount Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountResolvedbyPro__c</fullName>
        <description>This is the amount that was resolved by the pro (not refunded).</description>
        <inlineHelpText>This is the amount the pro has resolved because we re-established communication (pro fixed, not refunded).</inlineHelpText>
        <label>Amount Resolved by Pro</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountResolvedbyTT__c</fullName>
        <description>Rollup summary to calculate the total amount of money paid out by Thumbtack.</description>
        <label>Amount Resolved by TT</label>
        <summarizedField>MIIncidentAction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>MIIncidentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Payout</value>
        </summaryFilterItems>
        <summaryForeignKey>MIIncidentAction__c.MIIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amountsenttocollections__c</fullName>
        <inlineHelpText>If this incident has been sent to collections, please mark the amount here.</inlineHelpText>
        <label>Amount sent to collections</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <description>Field for who approved the comp</description>
        <label>Approved By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ashley Powell</fullName>
                </value>
                <value>
                    <fullName>Jody Kershaw</fullName>
                </value>
                <value>
                    <fullName>Jonathan Bushnell</fullName>
                </value>
                <value>
                    <fullName>Lindsay Harrop</fullName>
                </value>
                <value>
                    <fullName>Robyn Jeserick</fullName>
                </value>
                <value>
                    <fullName>Simon Fullerton</fullName>
                </value>
                <value>
                    <fullName>Tyler Bailey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArbiClaimsStatus__c</fullName>
        <description>Picklist whose value describes the status of the ArbiClaims process for the MI Incident.</description>
        <label>ArbiClaims Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not filed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Decision made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArbitrationLink__c</fullName>
        <description>Formula field to hyperlink to the 3rd party arbitration platform page details for the incident.</description>
        <formula>HYPERLINK(&quot;https://www.fairclaims.com/partners/1/prospects/&quot;+&quot;TT&quot;+(RIGHT(IncidentNumber__c, 5)), &quot;Dispute Details&quot;, &quot;_blank&quot;)</formula>
        <label>Arbitration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArbitrationStatus__c</fullName>
        <description>Picklist whose value describes the status of the arbitration process for the MI Incident.</description>
        <label>Arbitration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Claimant signed up</fullName>
                </value>
                <value>
                    <fullName>Respondent signed up</fullName>
                </value>
                <value>
                    <fullName>Claimant did not sign up</fullName>
                </value>
                <value>
                    <fullName>Respondent did not sign up</fullName>
                </value>
                <value>
                    <fullName>Decision made</fullName>
                </value>
                <value>
                    <fullName>Settlement reached</fullName>
                </value>
                <value>
                    <fullName>Payment made</fullName>
                </value>
                <value>
                    <fullName>Payment overdue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Not filed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageReviewStarRating__c</fullName>
        <description>Pro&apos;s star rating average number.</description>
        <label>Average Review Star Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSATEligibilityCustomer__c</fullName>
        <description>Formula to calculate the CSat eligibility for the related customer.</description>
        <formula>IF(CustomerContact__r.DoNotSurvey__c = true, &quot;Not eligible&quot;, 
IF(CustomerContact__r.ContactIsThumbtackStaff__c = true, &quot;Not eligible&quot;, 
IF(IsTestData__c, &quot;Not eligible&quot;, 
IF(CSATOfferedCustomer__c = true, &quot;Not eligible&quot;,
IF(DoNotSurveyCustomer__c = true, &quot;Not eligible&quot;,
IF(RecordType.DeveloperName = &apos;Confidential&apos;, &quot;Not eligible&quot;,
IF(ISPICKVAL(MICategory__c, &quot;Physical harm / Inappropriate contact&quot;), &quot;Not eligible&quot;,
IF(ISBLANK(CustomerEmail__c), &quot;Not eligible&quot;,
IF(OR(ISPICKVAL(OutcomeCustomer__c,&quot;&quot;),ISPICKVAL(OutcomeCustomer__c, &quot;Unresponsive&quot;), ISPICKVAL(OutcomeCustomer__c, &quot;Arbitration judgement&quot;)), &quot;Not eligible&quot;,
IF(TEXT(Status__c) &lt;&gt; &quot;Closed&quot;, &quot;Not eligible&quot;,
&quot;Eligible&quot;))))))))))</formula>
        <label>CSAT Eligibility - Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSATEligibilityPro__c</fullName>
        <description>Formula to calculate the CSat eligibility for the related pro.</description>
        <formula>IF(ProContact__r.DoNotSurvey__c = true, &quot;Not eligible&quot;, 
IF(ProContact__r.ContactIsThumbtackStaff__c = true, &quot;Not eligible&quot;, 
IF(IsTestData__c, &quot;Not eligible&quot;, 
IF(CSATOfferedPro__c = true, &quot;Not eligible&quot;,
IF(DoNotSurveyPro__c = true, &quot;Not eligible&quot;,
IF(RecordType.DeveloperName = &apos;Confidential&apos;, &quot;Not eligible&quot;,
IF(ISPICKVAL(MICategory__c, &quot;Physical harm / Inappropriate contact&quot;), &quot;Not eligible&quot;,
IF(ISBLANK(ProEmail__c), &quot;Not eligible&quot;,
IF(OR(ISPICKVAL(OutcomePro__c,&quot;&quot;),ISPICKVAL(OutcomePro__c, &quot;Removed&quot;)), &quot;Not eligible&quot;,
IF(TEXT(Status__c) &lt;&gt; &quot;Closed&quot;, &quot;Not eligible&quot;,
&quot;Eligible&quot;))))))))))</formula>
        <label>CSAT Eligibility - Pro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSATOfferedCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSAT Offered Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSATOfferedPro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSAT Offered Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>This is the Date/Time that the MI Incident was closed.</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompensationReason__c</fullName>
        <description>Reason codes for TT compensation, taken from the legacy comp tracker</description>
        <label>Compensation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ResolutionTier__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Collections received</fullName>
                </value>
                <value>
                    <fullName>Customer satisfaction</fullName>
                </value>
                <value>
                    <fullName>Money back guarantee</fullName>
                </value>
                <value>
                    <fullName>Property damage guarantee</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Successful card charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompensationStatus__c</fullName>
        <description>Field for compensation status</description>
        <label>Compensation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Payment Sent</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Sent for Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compensation_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true after a compensation has been approved using the approval engine.</description>
        <label>Compensation Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>Formula field to display the MI Incident created date and time.  Used in reporting.</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CriminalBackgroundConcern__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Criminal Background Concern?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account object, used to indicate the customer involved in the MI Incident</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MI Incidents (Customer)</relationshipLabel>
        <relationshipName>MIIncidentsCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerAdminLink__c</fullName>
        <description>Field for customer&apos;s admin link, mainly used for legacy comps</description>
        <label>Customer Admin Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CustomerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact record for the customer associated with the incident.</description>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MIIncidentsCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerEmail__c</fullName>
        <description>Email address of the related customer; populated via external data query when incident is created, but editable on the MI Incident for communication purposes - when changed on MI Incident it will not update the customer&apos;s account or Admin.</description>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>Customer account number</description>
        <label>Customer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerIPAddresses__c</fullName>
        <description>Customer IP activity from legacy comp tracker</description>
        <label>Customer IP Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>Field for Customer Name. Mainly used for legacy comps.</description>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPhone__c</fullName>
        <description>The phone number of the related customer; populated on incident creation via external data source, however editable by MI agent during incident resolution; if edited on incident it does not update the customer&apos;s account phone number in admin.</description>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DamageOccurredDate__c</fullName>
        <description>The date the damage/incident occurred.</description>
        <inlineHelpText>The date the damage or other incident occurred.</inlineHelpText>
        <label>Damage Occurred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePaymentSubmitted__c</fullName>
        <description>Date the comp payment was submitted to AP</description>
        <inlineHelpText>This is the date that payment was submitted to Accounts Payable</inlineHelpText>
        <label>Date Payment Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePropertyDamageOccurred__c</fullName>
        <description>The date when the property damage occurred.</description>
        <inlineHelpText>The date when the property damage occurred.</inlineHelpText>
        <label>Date Property Damage Occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePropertyDamageReported__c</fullName>
        <description>The date when the property damage was reported to Thumbtack.</description>
        <inlineHelpText>The date when the property damage was reported to Thumbtack.</inlineHelpText>
        <label>Date Property Damage Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateProwassenttoCollections__c</fullName>
        <label>Date Pro was sent to Collections</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateReported__c</fullName>
        <description>Field for date the issue was first reported. Mainly used for legacy comps, since we can use the original case creation date for the same thing going forward.</description>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DescriptionOfDispute__c</fullName>
        <description>A brief description of the dispute between the pro and customer.</description>
        <label>Description of Dispute</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DesiredResolutionAmount__c</fullName>
        <description>Amount that the customer is disputing.</description>
        <inlineHelpText>This is the amount that the customer is disputing</inlineHelpText>
        <label>Desired Resolution Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DispositionTowardsThumbtack__c</fullName>
        <description>Open text field for agents to enter in general notes about the customer&apos;s disposition toward Thumbtack.</description>
        <label>Disposition Towards Thumbtack</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DoNotSurveyCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to manually override the CSat survey from being sent to the customer.</description>
        <label>Do Not Survey - Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSurveyPro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to manually override the CSat survey from being sent to the pro.</description>
        <label>Do Not Survey - Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocusignStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>MI Incidents</relationshipLabel>
        <relationshipName>MI_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ElapsedHiredTimeDays__c</fullName>
        <formula>IF(NOT ISBLANK(hired_time__c), FLOOR(hired_time__c - request_create_time__c),
NULL)</formula>
        <label>Elapsed Hired Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedReportedTimeDays__c</fullName>
        <description>Formula field to calculate the number of hours between the date the property damage occurred and the date the property damage was reported to Thumbtack.</description>
        <formula>IF(RecordTypeId = &apos;01231000000xzKg&apos;,
(DatePropertyDamageReported__c - DatePropertyDamageOccurred__c),
(ReportedDate__c - DamageOccurredDate__c)
)</formula>
        <inlineHelpText>The number of hours between the date the property damage occurred and the date the property damage was reported to Thumbtack.</inlineHelpText>
        <label>Elapsed Reported Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedReportedTimeHours__c</fullName>
        <description>Formula field to calculate the number of hours between the date the property damage occurred and the date the property damage was reported to Thumbtack.</description>
        <formula>(DatePropertyDamageReported__c - DatePropertyDamageOccurred__c)*24</formula>
        <inlineHelpText>The number of hours between the date the property damage occurred and the date the property damage was reported to Thumbtack.</inlineHelpText>
        <label>Elapsed Reported Time (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationDate__c</fullName>
        <description>The date the MI Incident escalation took place.</description>
        <label>Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EscalationType__c</fullName>
        <label>Escalation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High dollar</fullName>
                </value>
                <value>
                    <fullName>MI concern</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalQuoteData__c</fullName>
        <label>External Quote Data</label>
        <length>255</length>
        <referenceTo>becquerel_mi_incident_project_data__x</referenceTo>
        <relationshipLabel>MI Incidents</relationshipLabel>
        <relationshipName>MIIncidents</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>FairClaimsLink__c</fullName>
        <formula>HYPERLINK(&quot;https://www.fairclaims.com/partners/1/prospects/new?&amp;claimant_first_name=&quot;&amp;CustomerAccount__r.usr_first_name__c&amp;&quot;&amp;claimant_last_name=&quot;&amp;CustomerAccount__r.usr_last_name__c&amp;&quot;&amp;claimant_email=&quot;&amp;CustomerEmail__c&amp;&quot;&amp;claimant_phone=&quot;&amp;CustomerPhone__c&amp;&quot;&amp;respondent_first_name=&quot;&amp;ProAccount__r.usr_first_name__c&amp;&quot;&amp;respondent_last_name=&quot;&amp;ProAccount__r.usr_last_name__c&amp;&quot;&amp;respondent_email=&quot;&amp;ProEmail__c&amp;&quot;&amp;respondent_phone=&quot;&amp;ProPhone__c&amp;&quot;&amp;dispute_code=&quot;&amp;IncidentRef__c&amp;&quot;&amp;dispute_amount=&quot;&amp;TEXT(AmountInDispute__c),&quot;Submit New Dispute&quot;, &quot;_blank&quot;)</formula>
        <label>FairClaims Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstCaseCreatedDate__c</fullName>
        <description>The date/time the first case related to the incident was created.</description>
        <label>First Case Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstCaseTransferredtoMIDate__c</fullName>
        <description>The date/time the first case related to the incident was transferred to MI.</description>
        <label>First Case Transferred to MI Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <description>Formula field to display a visual indicator on the case when a review is needed on the incident; used in list views.</description>
        <formula>IF( AND(NewEmailFlag__c, NextFollowupDate__c &lt;= NOW()), IMAGE(&quot;/resource/1496486597000/EmailWithClockUtilityIcon&quot;, &quot;Email Reply&quot;, 22,38), 
IF( AND(NewPostFlag__c,  NextFollowupDate__c &lt;= NOW()), IMAGE(&quot;/resource/1496486597000/SharePostWithClockUtilityIcon&quot;, &quot;New Case Post&quot;, 22,38),
IF( AND(NewCallFlag__c, NextFollowupDate__c &lt;= NOW()), IMAGE(&quot;/resource/1496486597000/PhoneWithClockUtilityIcon&quot;, &quot;Call Logged&quot;, 22,38),
IF( AND(NewCaseFlag__c, NextFollowupDate__c &lt;= NOW()), IMAGE(&quot;/resource/1496486597000/CaseWithClockUtilityIcon&quot;, &quot;Case related&quot;, 22,38),
IF( NewEmailFlag__c = True, IMAGE(&quot;/resource/1496486597000/EmailUtilityIcon&quot;, &quot;Email Reply&quot;, 15,15), 
IF( NextFollowupDate__c &lt;=NOW(), IMAGE(&quot;/resource/1496486597000/ReminderUtilityIcon&quot;, &quot;Follow-up due&quot;, 15,15), 
IF( NewPostFlag__c = True, IMAGE(&quot;/resource/149648659700/PostUtilityIcon&quot;, &quot;Case Post&quot;, 15,15),
IF( NewCallFlag__c = True, IMAGE(&quot;/resource/149648659700/PhoneCallUtilityIcon&quot;, &quot;Call Logged&quot;, 15,15),
IF( NewCaseFlag__c = True, IMAGE(&quot;/resource/149648659700/ShoppingBagUtilityIcon&quot;, &quot;Case related&quot;, 15,15), 
IF (CONTAINS(SolutionCenterStage__c, &quot;Under review&quot;), IMAGE(&quot;resource/1522072831000/SignpostLightningUtilityIcon&quot;, &quot;TSC review needed&quot;, 15,15),
NULL))))))))))</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlaggedReason__c</fullName>
        <description>Reasons we are flagging</description>
        <label>Flagged Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ResolutionTier__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Documentation</fullName>
                </value>
                <value>
                    <fullName>Customer didn&apos;t want us to contact Pro</fullName>
                </value>
                <value>
                    <fullName>Customer becomes unresponsive</fullName>
                </value>
                <value>
                    <fullName>Minor issue</fullName>
                </value>
                <value>
                    <fullName>Unreasonable desired resolution</fullName>
                </value>
                <value>
                    <fullName>Other (please add to Tier 3 note)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForMILeadership__c</fullName>
        <description>Field for MI leadership, used to direct if MI savings are due to P&amp;P or because leadership chose not to comp.</description>
        <inlineHelpText>This field is for MI Leadership only.</inlineHelpText>
        <label>For MI Leadership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MI Policies &amp; Procedures</fullName>
                    <default>true</default>
                    <label>MI Policies &amp; Procedures</label>
                </value>
                <value>
                    <fullName>Chose not to compensate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentCategorization__c</fullName>
        <description>This is to help better track how many of each type of incident we see and how effective changes we make to prevent MI issues are.</description>
        <label>Incident Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Not enough details</fullName>
                </value>
                <value>
                    <fullName>1 - No property damage or serious threat</fullName>
                </value>
                <value>
                    <fullName>2 - Property damage or money (less than $5k)</fullName>
                </value>
                <value>
                    <fullName>3 - Property damage or money ($5k or above)</fullName>
                </value>
                <value>
                    <fullName>4 - Bodily harm or threat of serious bodily harm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentExists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incident Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncidentNumber__c</fullName>
        <description>Number to easily identify the MI Incident.</description>
        <displayFormat>MI-{00000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IncidentRef__c</fullName>
        <description>Formula field to extract the &quot;MI-&quot; from the Incident number, used in 3rd party external integrations.</description>
        <formula>SUBSTITUTE(IncidentNumber__c,&quot;MI-&quot;,&quot;&quot;)</formula>
        <label>Incident Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate true if the record is test or sample data.  Record will be excluded from reporting and eventually be deleted from the system.</description>
        <inlineHelpText>Checkbox field to indicate true if the record is test or sample data.  Record will be excluded from reporting and eventually be deleted from the system.</inlineHelpText>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActionStatus__c</fullName>
        <description>The status of the last action initiated on the incident.  Populated via workflow field update and used in list views.</description>
        <label>Last Action Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStatusChangeDate__c</fullName>
        <description>The date of the last status change; populated via process builder.</description>
        <label>Last Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LicensingConcern__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensing Concern?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>